# libgloss-dramfs

./: .gitignore  .gitmodules  LICENSE  Makefile.in  README.md  configure  configure.ac
dramfs/: dramfs_fdtable.c  dramfs_fdtable.h  dramfs_fs.c  dramfs_fs.h  dramfs_intf.c  dramfs_intf.h  dramfs_mklfs.c  dramfs_util.c  dramfs_util.h
misc/: crt0.S  crtmain.S  traps.c
sys/: sys_close.c  sys_execve.c  sys_exit.c  sys_fork.c  sys_fstat.c  sys_getpid.c  sys_gettimeofday.c  sys_isatty.c  sys_kill.c  sys_link.c  sys_lseek.c  sys_open.c  sys_read.c  sys_sbrk.c  sys_stat.c  sys_times.c  sys_unlink.c  sys_wait.c  sys_write.c
tests/: args.c  dramfs_intf_dromajo.c  dramfs_intf_spike.c  hello.c
util/: dramfs.ld  dramfs.specs
